--- a/dotNet5782_0545_8228/PL/MainWindow.xaml
+++ b/dotNet5782_0545_8228/PL/MainWindow.xaml
@@ -6,7 +6,19 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="Xperience Drone Solutions" Height="640" Width="800">
-    <Grid Background="CadetBlue">
+    <Grid Opacity="0.99" Cursor="Arrow">
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black" Offset="0"/>
+                <GradientStop Color="#FF5F7C65" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid.OpacityMask>
+            <RadialGradientBrush>
+                <GradientStop Color="Black"/>
+                <GradientStop Color="#FFAD9C9C" Offset="1"/>
+            </RadialGradientBrush>
+        </Grid.OpacityMask>
         <Button x:Name="ShowDronesButton" 
                 Content="Click here to manage drones" 
                 HorizontalAlignment="Left" Margin="244,282,0,0" 
@@ -14,15 +26,7 @@
                 Height="94" Width="299"
                 FontSize="24"
                 FontFamily="Tw Cen MT"/>
-        <Image Name="XDS" Margin="288,76,302,255" Visibility="Visible">
-            <Image.Source>
-                <BitmapImage UriSource="images/XDS.png"/>
-            </Image.Source>
-        </Image>
-        <Image Name="Drone" Margin="318,42,332,461" Visibility="Visible">
-            <Image.Source>
-                <BitmapImage UriSource="images/drone.png"/>
-            </Image.Source>
-        </Image>
+        <Image Name="XDS" HorizontalAlignment="Center" Height="265" Margin="0,30,0,0" VerticalAlignment="Top" Width="406" Source="/images/XDS.png"/>
+        <Image Name="Drone" HorizontalAlignment="Center" Height="265" Margin="0,30,0,0" VerticalAlignment="Top" Width="406" Source="C:\Users\ronib\OneDrive\Desktop\CompSci\Year 3\Semester 1\Mini Project in Windows\dotNet5782_0545_8228\dotNet5782_0545_8228\PL\images\drone.png"/>
     </Grid>
 </Window>
