UI tweaks, added tabs

--- a/dotNet5782_0545_8228/PL/App.xaml
+++ b/dotNet5782_0545_8228/PL/App.xaml
@@ -5,10 +5,17 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <LinearGradientBrush x:Key="ButtonBrush" EndPoint="0.5,0"  StartPoint="0.5,1">
-            <GradientStop Color="CadetBlue" Offset="0"/>
-            <GradientStop Color="LightGray" Offset=".6"/>
+            <GradientStop Color="DarkGray" Offset="0"/>
+            <GradientStop Color="LightGray" Offset=".5"/>
         </LinearGradientBrush>
-         
+        <LinearGradientBrush x:Key="WindowBrush" EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="LightGray" Offset="0"/>
+            <GradientStop Color="DarkCyan" Offset="1"/>
+        </LinearGradientBrush>
+        
+
+
+
     </Application.Resources>
    
 </Application>
