--- a/dotNet5782_0545_8228/PL/MainWindow.xaml
+++ b/dotNet5782_0545_8228/PL/MainWindow.xaml
@@ -10,34 +10,24 @@
     <Window.Resources>
 
     </Window.Resources>
-    <Grid Opacity="0.99" Cursor="Arrow">
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="Black" Offset="0"/>
-                <GradientStop Color="#FF5F7C65" Offset="1"/>
-            </LinearGradientBrush>
+    <Grid Opacity="0.99" Cursor="Arrow" Background="{StaticResource WindowBrush}">
 
-        </Grid.Background>
-        <Grid.OpacityMask>
-            <RadialGradientBrush>
-                <GradientStop Color="Black"/>
-                <GradientStop Color="#FFAD9C9C" Offset="1"/>
-            </RadialGradientBrush>
-        </Grid.OpacityMask>
 
         <Button x:Name="ShowDronesButton" 
                 Content="Login" 
-                HorizontalAlignment="Center" Margin="0,405,0,0" 
-                VerticalAlignment="Top" Click="ShowDronesButton_Click"
+                HorizontalAlignment="Center" Margin="0,250,0,0" 
+                VerticalAlignment="Center" Click="ShowDronesButton_Click"
                 Height="39" Width="214"
                 FontSize="18"
                 FontFamily="Tw Cen MT"
                 Background="{StaticResource ButtonBrush}"/>
 
-        <Image Name="XDS" HorizontalAlignment="Center" Height="179" Margin="0,151,0,0" VerticalAlignment="Top" Width="240" Source="/images/XDS.png"/>
-        <TextBox Name="Username" Text="Enter Username"  HorizontalAlignment="Center" Margin="0,312,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="214" Height="20"/>
-        <TextBox Name="Password" Text="Enter Password" HorizontalAlignment="Center" Margin="0,367,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="214" Height="20"/>
+        <Image Name="XDS" HorizontalAlignment="Center" Height="179" Margin="0,-200,0,0" VerticalAlignment="Center" Width="240" Source="/images/XDS.png"/>
+        <TextBox Name="Username" Text="Enter Username"  HorizontalAlignment="Center" Margin="0,70,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="214" Height="20"/>
+        <TextBox Name="Password" Text="Enter Password" HorizontalAlignment="Center" Margin="0,150,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="214" Height="20"/>
         <Button Name="NewUser" Content="Create a New Account" HorizontalAlignment="Left" Margin="10,0,0,10" VerticalAlignment="Bottom" Width="131" Background="{StaticResource ButtonBrush}"/>
-        <Image Name="Drone" Margin="346,69,346,449" HorizontalAlignment="Center" VerticalAlignment="Top" Source="/images/drone-x.png" Visibility="Visible"/>
+        <Image Name="Drone" Margin="346,69,346,449" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Source="/images/drone-x.png"/>
+        <RadioButton Name="IsCustomer" Content="Customer User" HorizontalAlignment="Center" Margin="120,-20,0,0" VerticalAlignment="Center"/>
+        <RadioButton Name="IsBusiness" Content="Business User" HorizontalAlignment="Center" Margin="-120,-20,0,0" VerticalAlignment="Center" IsChecked="True"/>
     </Grid>
 </Window>
